<resources>
    <string name="app_name">Parcial 1 Leonel Piñeiro</string>
    <string name="nombre_app">¿Quién es ese Pokémon?</string>
    <string name="btEnviar">Enviar respuesta</string>
    <string name="btSalir">Salir</string>
    <string name="respuesta_final">Esta fue la última pregunta, gracias por jugar!</string>
    <string name="respuesta_enviada">Respuesta enviada</string>
    <string name="btContinuar">Continuar</string>
    <string name="hideNombre">Ingresá tu nombre</string>
    <string name="Preguntas">Seleccione la pregunta para ver el resultado correcto</string>
    <string name="Reglas">Este juego consiste en adivinar qué Pokémon se esconde en la imágen.
    \nDeberás seleccionar la opción correcta y enviar la respuesta.
    \nAl final tendrás tu puntuación y las respuestas correctas.</string>
    <string name="title_activity_bye">ByeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="apodo">Apodo</string>
    <string name="password">Contraseña</string>
    <string name="previous">Previous</string>
    <string name="Registrate">Registrate</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="music">Music</string>
    <string name="fecha">Fecha</string>
    <string name="play">¡A Jugar!</string>
    <string name="inicio">   Inicio   </string>
    <string name="correctas">Correctas</string>
    <string name="gracias">¡Muchas gracias por Jugar! \nEstos son los puntajes de otros jugadores</string>
    <string name="btIinicio">Volver al Inicio</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="holalogin">¡Hola! \nPor favor, ingresá con tus credenciales.</string>
    <string name="tvRegistro">¿No tenés cuenta? Registrate</string>

    <string name="tvGracias"> ¡Gracias por jugar!\n\nEste fue un trabajo realizado por Leonel Piñeiro para la materia Aplicaciones Móviles.\n\nTurno Noche 4to Cuatrimestre\n\nProfesor: Sergio Medina.\n\nInstituto Davinci
</string>


</resources>