<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:backgroundTintMode="screen"
    android:backgroundTint="#ABFFFFFF"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#82B1FF"
            android:text="@string/btSalir"
            android:textColor="@color/pokemon_red" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/pokemon_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="366dp"
        android:layout_height="92dp"
        android:text="@string/tvRegistro"
        android:textAlignment="center"
        android:textColor="@color/pokemon_red"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header"
        app:layout_constraintVertical_bias="0.568" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="322dp"
        android:layout_height="102dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#82B1FF"
        android:onClick="onRegisterButtonClick"
        android:text="@string/Registrate"
        android:textColor="@color/pokemon_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApodo" />

    <EditText
        android:id="@+id/etApodo"
        android:layout_width="327dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/apodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPwd" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="327dp"
        android:layout_height="90dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>