<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:backgroundTint="#ABFFFFFF"
    android:backgroundTintMode="screen"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#82B1FF"
            android:text="@string/btSalir"
            android:textColor="@color/pokemon_red" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/pokemon_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="376dp"
        android:layout_height="152dp"
        android:text="@string/holalogin"
        android:textAlignment="center"
        android:textColor="@color/pokemon_red"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="322dp"
        android:layout_height="102dp"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="327dp"
        android:layout_height="91dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:backgroundTint="#82B1FF"
        android:onClick="onLoginButtonClick"
        android:text="@string/login"
        android:textColor="@color/pokemon_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPwd"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:backgroundTint="#82B1FF"
        android:text="@string/Registrate"
        android:textColor="@color/pokemon_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPwd" />
</androidx.constraintlayout.widget.ConstraintLayout>