<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:backgroundTint="#ABFFFFFF"
    android:backgroundTintMode="screen"
    tools:context=".FinalActivity">

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="418dp"
        android:layout_height="43dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="39dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rvPartidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#82B1FF"
            android:text="@string/btSalir"
            android:textColor="@color/pokemon_red" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/pokemon_blue"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvGracias"
        android:layout_width="327dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tvGracias"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btEnd"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:backgroundTint="#82B1FF"
        android:text="Salir"
        android:textColor="@color/pokemon_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/btInicio"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:backgroundTint="#82B1FF"
        android:text="Volver al inicio"
        android:textColor="@color/pokemon_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPartidas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header" />


</androidx.constraintlayout.widget.ConstraintLayout>