<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:backgroundTint="#ABFFFFFF"
    android:backgroundTintMode="screen"
    tools:context=".RulesActivity">
    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#82B1FF"
            android:text="@string/btSalir"
            android:textColor="@color/pokemon_red" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/pokemon_blue"
            android:textSize="20dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvBienvenido"
        android:textColor="@color/pokemon_red"
        android:layout_width="346dp"
        android:layout_height="55dp"
        android:text="Bienvenido + nombre"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />
    <TextView
        android:id="@+id/tvReglas"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:text="@string/Reglas"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/btEmpezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¡A Jugar!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReglas"
        app:layout_constraintVertical_bias="0.381"
        android:backgroundTint="#82B1FF"
        android:textColor="@color/pokemon_red"/>

    <Button
        android:id="@+id/btVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   Inicio   "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReglas"
        app:layout_constraintVertical_bias="0.381"
        android:backgroundTint="#82B1FF"
        android:textColor="@color/pokemon_red"/>
</androidx.constraintlayout.widget.ConstraintLayout>